--- Auto-Git Commit ---

--- a/linux kernal/cdos/QQupdate/分析过程.md
+++ b/linux kernal/cdos/QQupdate/分析过程.md
@@ -72,6 +72,18 @@
 
  # 5. 尝试通过
 
+ # 6. 修改Wine来优化程序，不使用守护进程
+ ## 6.1 通过fork创建进程过程
+ 原理：fork创建进程过程，fork 的pid确定为子进程后，就可以execv子进程程序，通过文件名，打开探测程序
+ 结果：失败。根本就没有调用fork这里。WINPAI createProcess 传递的路径名是空
+ ## 6.2 shell_exect 
+ 找到了文件吗，并能执行脚本
+ ### 6.2.1 创建进程执行程序
+ 失败
+ ### 6.2.2 创建线程
+ 
+
+
 
 
  dlls/kernel/process.c  1511 fork_and_exec
