--- Auto-Git Commit ---

--- a/linux kernal/cdos/QQupdate/分析过程.md
+++ b/linux kernal/cdos/QQupdate/分析过程.md
@@ -12,6 +12,7 @@
     - [4.1 删除txupd.exe](#41-删除txupdexe)
     - [4.2 替换txupd.exe](#42-替换txupdexe)
     - [4.3 探测txupd.exe进程kill掉](#43-探测txupdexe进程kill掉)
+        - [6.2.3 return 0](#623-return-0)
 
 <!-- /TOC -->
 # 1. 背景
@@ -79,8 +80,13 @@
  ## 6.2 shell_exect 
  找到了文件吗，并能执行脚本
  ### 6.2.1 创建进程执行程序
- 失败
+ 失败:fork会出现多个QQ，wine会检测出现问题
  ### 6.2.2 创建线程
+ pthread.o默认编译的时候不背加载，惭愧不会修改makefile文件，尝试一直失败
+### 6.2.3 return 0
+当检测处有txupd文件的时候，就直接return 0.
+成功
+![2019-09-23-14-39-07.png](./images/2019-09-23-14-39-07.png)
  
 
 
