--- a/云计算/虚拟化/系统虚拟化/1. 系统虚拟化简介.md
+++ b/云计算/虚拟化/系统虚拟化/1. 系统虚拟化简介.md
@@ -11,6 +11,8 @@
             - [2.2.2.3 操作系统等级的虚拟化（Operating System Level）](#2223-操作系统等级的虚拟化operating-system-level)
             - [2.2.2.4 编程语言等级的虚拟化（Programming Language Level）](#2224-编程语言等级的虚拟化programming-language-level)
             - [2.2.2.5 库等级的虚拟化（Library Level）](#2225-库等级的虚拟化library-level)
+- [3. 系统虚拟化](#3-系统虚拟化)
+- [4. 虚拟化简史](#4-虚拟化简史)
 
 <!-- /TOC -->
 # 1. 背景
@@ -115,3 +117,31 @@
 例如，WINE系统是在Linux上模拟了Windows的库函数接口(！！！)，使得一个Windows的应用程序能够在Linux平台上运行。
 
 这个分类底下代表性的有Wine以及WSL（Windows Subsystem for Linux）。
+
+# 3. 系统虚拟化
+系统虚拟化是将一台物理物理计算机系统虚拟成一台或者多台虚拟计算机系统，每个虚拟的计算机系统（虚拟机）都有自己的虚拟硬件，来提供独立的虚拟机执行系统。
+这个虚拟化层被称为虚拟机监控系统。
+![2019-09-23-15-36-54.png](./images/2019-09-23-15-36-54.png)
+
+* 本质上来讲, 虚拟机系统和物理机系统可以是完全不同的ISA。例如, 可以在一个x86物理机上运行一个ARM的虚拟机. 但是，不同的ISA使得虚拟机的每一条指令都需要在物理机上模拟执行，从而造成较大的性能下降。
+* 当然相同体系结构的系统虚拟化通常会有比较好的性能, VMM也会实现比较简单, 虚拟机大部分指令可在处理器上直接运行, 只有那些需要虚拟化的指令才会由VMM进行处理.
+
+1974年，Popek和Goldberg定义了虚拟机可以看作是物理机的一种高效隔离的复制。该定义蕴含了三层含义（同质、高效和资源受控）。
+*  同质，虚拟机的运行环境和物理机的环境在本质上需要是相同的，但是在表现上能够有一定的差异。例如虚拟机看到的处理器个数和物理机上实际的处理器个数可以不一样，但虚拟机中和物理机上看到的处理器必须是同一种基本类型(！！！)。
+* 高效，要求虚拟机中运行的软件接近物理机上直接运行的性能。因此，软件在虚拟机中运行时，大多数的指令是直接运行在硬件上的，只有少量指令需要经过VM处理或模拟。
+* 资源受控，VMM对系统资源拥有完全控制能力和管理权限。
+相同ISA的系统虚拟化取得了很大的技术和解决方案层面的发展. 本书内容以相同ISA的系统虚拟化展开, 以x86为例, 介绍系统虚拟化的相关内容.
+
+# 4. 虚拟化简史
+系统上第一个虚拟机是1965年左右IBM公司开发的System/360 Model 40 VM.
+* x86体系结构的先天设计, 存在对系统虚拟化的支持缺陷或虚拟化漏洞(Virtualization Hole). 在x86体系结构上的虚拟化技术, 都需要用软件的方法弥补体系结构设计上的不足. 例如, 代码扫描与修补方法(Scan-and-patch)或二进制代码翻译(Binary Translation)技术实现基于软件的完全虚拟化. 但这样势必带来性能损失和非常大的软件复杂度.
+
+* 这种情况下, 学术界提出另一种思路来克服体系结构上的缺陷, 叫类虚拟化技术(Para-Virtualization). 主要思想就是通过客户机操作系统与虚拟化管理层的协同设计, 由虚拟化管理层软件提供一个近似于原物理系统, 但又不完全相同的(与原系统)的虚拟平台, 以避免虚拟化漏洞和实现更高的虚拟化效率. 修改操作系统的源码来与下层虚拟化管理层软件协同工作, 从而避免体系结构上的缺陷. Denali项目和Xen项目都支持类虚拟化. 国内把这个技术也叫做半虚拟化或者部分虚拟化, 但不准确.
+
+* 基于软件的完全虚拟化方法不可避免地导致性能上的下降, 同时伴随一些兼容性上的损失. 而修改操作系统的类虚拟化方法对现有系统的移植和内核升级的维护提出要求, 并且对非开源的操作系统也有局限.
+
+* 从根本上解决体系结构的缺陷, 最好是从体系结构本身入手. Intel和AMD在2006年后都逐步推出了带硬件虚拟化支持的处理器, 如Intel的Virtualization Technology(VT)技术和AMD的Secure Virtual Machine(SVM)技术. Intel和AMD采用的都是硬件辅助的完全虚拟化策略. 操作系统不需要做任何改动就能运行在虚拟机中. VMM软件可以利用这些硬件虚拟化技术, 这样软件的实现也极大简化, 并且更为高效和安全.
+
+* 但这只是解决了处理器层如何更好地支持虚拟化的问题. 为使虚拟化解决方案更加高效(例如I/O虚拟化), 计算机系统各个层次都在逐渐加入对虚拟化的硬件支持. 以Intel为例, 除了处理器中的VT技术外, 芯片组！！！中开始提供针对IO虚拟化功能的VT-d技术, 网卡中也开始提供更好地网络虚拟化支持的多队列的VMDq技术等. 同时, PCI标准组织也在指定PCI设备级对虚拟化进行支持的单根PCI桥IOV(Single Root IOV, SR-IOV)和多根PCI桥IOV(Multi-Root IOV, MR-IOV)标准.
+
+* 虚拟化软件也长足发展。除了VMware, Denali和Xen, 还有KVM, VirtualBox, 微软的虚拟化系列(VirtualPC, Hyper-V), Paralles的虚拟化系列(如Virtuozzo, Parallels Desktop for Mac), Citrix的XenServer, Sun的xVM, Oracle的Oracle VM和VirtualIron等.
