--- a/云计算/虚拟化/系统虚拟化/1. 系统虚拟化简介.md
+++ b/云计算/虚拟化/系统虚拟化/1. 系统虚拟化简介.md
@@ -13,6 +13,12 @@
             - [2.2.2.5 库等级的虚拟化（Library Level）](#2225-库等级的虚拟化library-level)
 - [3. 系统虚拟化](#3-系统虚拟化)
 - [4. 虚拟化简史](#4-虚拟化简史)
+- [5. 系统虚拟化的好处](#5-系统虚拟化的好处)
+    - [5.1 封装性](#51-封装性)
+    - [5.2 多实例](#52-多实例)
+    - [5.3 隔离](#53-隔离)
+    - [5.4 与硬件脱离](#54-与硬件脱离)
+    - [5.5 特权功能](#55-特权功能)
 
 <!-- /TOC -->
 # 1. 背景
@@ -145,3 +151,34 @@
 * 但这只是解决了处理器层如何更好地支持虚拟化的问题. 为使虚拟化解决方案更加高效(例如I/O虚拟化), 计算机系统各个层次都在逐渐加入对虚拟化的硬件支持. 以Intel为例, 除了处理器中的VT技术外, 芯片组！！！中开始提供针对IO虚拟化功能的VT-d技术, 网卡中也开始提供更好地网络虚拟化支持的多队列的VMDq技术等. 同时, PCI标准组织也在指定PCI设备级对虚拟化进行支持的单根PCI桥IOV(Single Root IOV, SR-IOV)和多根PCI桥IOV(Multi-Root IOV, MR-IOV)标准.
 
 * 虚拟化软件也长足发展。除了VMware, Denali和Xen, 还有KVM, VirtualBox, 微软的虚拟化系列(VirtualPC, Hyper-V), Paralles的虚拟化系列(如Virtuozzo, Parallels Desktop for Mac), Citrix的XenServer, Sun的xVM, Oracle的Oracle VM和VirtualIron等.
+
+# 5. 系统虚拟化的好处
+* 虚拟机之间有很强的隔离性
+*  虚拟化层作为特权层能够提供前所未有的功能.
+![2019-09-23-15-46-17.png](./images/2019-09-23-15-46-17.png)
+
+## 5.1 封装性
+以虚拟机为粒度的封装使得虚拟机运行环境的保存(！！！)非常便捷。虚拟机的优秀封装性使得以下应用模型可以很方便地实现。
+* 虚拟机克隆
+* 虚拟机快照
+* 虚拟机恢复
+## 5.2 多实例
+多个虚拟机参与调度，能优化物理服务器资源利用率。
+## 5.3 隔离
+每个应用程序可以在自己的操作系统环境中独立地运行而不影响其他的工作负载。例如, 一个虚拟机系统崩溃了, 其它虚拟机的应用程序仍然可以正常运行.
+## 5.4 与硬件脱离
+虚拟化是资源的逻辑表示, 它不受物理限制的约束. 由于虚拟化层的抽象, 虚拟机与底层硬件没有直接的绑定关系. 因此, 尽管目前计算机体系结构呈现出很大的异构性，但只要另一台计算机提供相同的虚拟硬件抽象层！！！，一个虚拟机就能够无缝地迁移过去。虚拟机迁移是虚拟化技术中的亮点之一。
+
+有了虚拟机迁移, 硬件维护就不必每次关闭计算机了. 在一台计算机需要硬件维护时, 其中运行的虚拟机能迁移到其它计算机中.
+
+另外, 虚拟硬件抽象层不需要与物理硬件相匹配, 因而还可以虚拟出较旧的硬件来兼容旧系统软件.
+## 5.5 特权功能
+由于虚拟机层处于客户机及客户机系统的下面, 其具有更高的特权级. 在这个层添加新功能有如下两个优势:
+* 新功能有高特权级, 不能被客户机操作系统绕过.
+* 新功能不需要了解客户机内部的语义, 使其实现上更容易.
+
+事件记录与回放(Log and Replay)在虚拟化层中能很方便实现, 因为虚拟化层截获并传递所有系统级事件.
+
+入侵检测(Intrusion Detection)也是在虚拟化层中添加的功能之一. 利用虚拟化层所在的特权级, 入侵检测系统能保证其检测不会被客户机绕过, 同时客户机也不会知道这个服务的存在.
+
+病毒检测等安全防范机制同样也能在虚拟化层实现, 其好处在于不需要担心检测系统本身的安全, 客户机中病毒很难攻击到下层, 甚至不会知道自身是运行在客户机中. 另外一个好处在于检测不会被客户机绕过.
