--- Auto-Git Commit ---

--- a/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
+++ b/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
@@ -6,6 +6,9 @@
         - [1.2.1 AMD64](#121-amd64)
         - [1.2.2 Intel 64](#122-intel-64)
 - [2. x86 内存架构](#2-x86-内存架构)
+    - [2.1 地址空间](#21-地址空间)
+        - [2.1.1 物理地址空间](#211-物理地址空间)
+        - [2.1.2 线性地址空间](#212-线性地址空间)
 
 <!-- /TOC -->
 # 1. x86历史
@@ -52,5 +55,14 @@ Intel 64架构加入了额外的寄存器和其他改良的指令集，可使处
 * 新增“禁止运行”位（eXecute Disable，XD bit）：相当于AMD 64的NX bit，通过设置此位可以防止蠕虫病毒的缓存溢出攻击。
 
 # 2. x86 内存架构
+## 2.1 地址空间
+### 2.1.1 物理地址空间
+*  从CPU的角度来看, 内存和其它硬件设备都是可以使用的资源. 这些资源组合(！！！)在一起, 分布在CPU的物理地址空间内(！！！内存只是一部分！！！).
+* 物理地址空间的大小, 由CPU实现的物理地址位数决定, 物理地址位数和CPU处理数据的能力(即CPU位数)没有必然关系, 例如16位的8086 CPU具有20位地址空间.
 
 
+### 2.1.2 线性地址空间
+* 和物理地址空间一样, 线性地址空间大小取决于CPU实现的线性地址位数, 例如实现了32位线性地址的CPU具有4GB大小的线性地址空间. 
+* 需要注意, 线性地址空间大小和物理地址空间大小没有必然关系. 例如Intel的PAE平台就具有4GB的线性地址空间, 64GB的物理地址空间.
+* 一个平台可以有多个线性地址空间, 在现代操作系统中, 每个进程都拥有自己的私有线性地址空间. 一个典型的线性地址空间如图.
+![2019-09-24-15-41-47.png](./images/2019-09-24-15-41-47.png)
