--- Auto-Git Commit ---

--- a/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
+++ b/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
@@ -9,6 +9,13 @@
     - [2.1 地址空间](#21-地址空间)
         - [2.1.1 物理地址空间](#211-物理地址空间)
         - [2.1.2 线性地址空间](#212-线性地址空间)
+    - [2.2 地址](#22-地址)
+        - [2.2.1 逻辑地址](#221-逻辑地址)
+        - [2.2.2 线性地址](#222-线性地址)
+        - [2.2.3 物理地址](#223-物理地址)
+    - [2.3 x86 内存管理机制](#23-x86-内存管理机制)
+        - [2.3.1 分段机制](#231-分段机制)
+            - [2.3.1.1 段选择符（段选择寄存器）](#2311-段选择符段选择寄存器)
 
 <!-- /TOC -->
 # 1. x86历史
@@ -66,3 +73,59 @@ Intel 64架构加入了额外的寄存器和其他改良的指令集，可使处
 * 需要注意, 线性地址空间大小和物理地址空间大小没有必然关系. 例如Intel的PAE平台就具有4GB的线性地址空间, 64GB的物理地址空间.
 * 一个平台可以有多个线性地址空间, 在现代操作系统中, 每个进程都拥有自己的私有线性地址空间. 一个典型的线性地址空间如图.
 ![2019-09-24-15-41-47.png](./images/2019-09-24-15-41-47.png)
+
+## 2.2 地址
+### 2.2.1 逻辑地址
+* 程序代码中使用的地址就是逻辑地址，逻辑地址通常由段选择符和段偏移地址组成，程序中操作的地址是段偏移地址部分。
+
+### 2.2.2 线性地址
+* 线性地址又叫虚拟地址，线性地址是逻辑地址转化之后结构，用来索引线性地址空间。当CPU采用分页机制时，线性地址必须转化成物理地址才能访问平台内存和硬件设备。
+* 如果地址没有采用分页，线性地址就是物理地址
+
+### 2.2.3 物理地址
+* 未采用分段机制:逻辑地址->线性地址=物理地址
+* 采用分段机制: 逻辑地址->线性地址->物理地址
+
+有些资料还有"总线地址"的提法, 因为给设备寄存器分配的物理地址(！！！)和寄存器在设备上的地址(！！！)是不同的(通常设备的寄存器都认为自己是从地址0开始的), 两者存在一个映射关系, 由设备的电子线路负责转换并对CPU透明(！！！). 由于CPU用于访问设备的物理地址(！！！)是设备寄存器展现给总线的地址, 所以在x86下有时称物理地址为总线地址.
+
+
+## 2.3 x86 内存管理机制
+* x86 内存管理机制分为两部分：分段机制和分页机制。
+* 分段机制为程序提供彼此隔离的代码区域、数据区域、栈区域，从而避免了同一个处理器上运行的多个程序互相影响。
+
+* 分页机制实现了传统的按需分页、虚拟内存机制，可以将程序的执行环境按需映射到物理内存。此外，分页机制还可以用于提供多任务的隔离。
+
+* 分段机制和分页机制都可以通过配置支持简单的单任务系统、多任务系统或共享内存的多处理器系统。需要强调的一点是，处理器无论在何种运行模式下都不可以禁止分段机制，但是分页机制却是可选选项。
+
+### 2.3.1 分段机制
+分段是一种简单的内存管理机制, 它将内存划分成以起始地址(Base)和长度(Limit)描述的块, 这些内存块就称为"段". 段可以与程序最基本的元素联系起来, 例如程序可以简单的分为代码段、数据段和栈, 段机制中就有对应的代码段、数据段和栈段。
+
+分段机制由4个基本部分组成: 逻辑地址、段选择寄存器、段描述符和段描述符表。
+其核心思想是: 使用段描述符描述段的基地址、长度以及各种属性(例如读写属性、访问权限). 当程序使用逻辑地址访问内存的某个部分时, CPU通过逻辑地址中的段选择符索引段描述符表以得到该内存对应的段描述符, 并检测程序的访问是否合法, 合法的话, 根据段描述符中的基地址将逻辑地址转换为线性地址.
+* 逻辑地址：程序使用地址
+* 段描述符表：用来索引每个程序的段描述地址
+* 段描述符：存储每个进程段首地址和属性等重要内容
+* 段选择寄存器：存储段描述符表的偏移地址，指向的每个进程的段描述符地址
+
+![2019-09-24-16-20-32.png](./images/2019-09-24-16-20-32.png)
+
+#### 2.3.1.1 段选择符（段选择寄存器）
+段描述符用来索引段描述符，段描述符存储在段选择寄存器中。
+段描述符共16位，结构图如下：
+![2019-09-24-16-28-28.png](./images/2019-09-24-16-28-28.png)
+
+各个字段含义如下：
+* 索引：段描述符表索引
+* TI：指明索引哪个段描述符表。当 TI=0 时，表示索引全局段描述符表（Global Descriptor Table，下面简称为GDT）；当TI=1时，表示索引本地段描述符表（Local Descriptor Table，下面简称为LDT）
+* RPL：Requested Privilege Level的简称，即所要求的权限级别。RPL存在于段选择寄存器的0、1位，为程序访问段时增加一级检查。
+
+段选择符作为逻辑地址的一部分，对应用程序是可见的。但是，正如前面在逻辑地址中介绍的，应用程序中只存储和使用逻辑地址的偏移部分，段描述符！！！ 的修改和分配！！！ 由连接器和加载器！！！ 完成。
+
+为了使CPU能够快速地获得段选择符，x86架构提供了6个段寄存器存放当前程序中各个段的段选择符。这6个段寄存器分别如下。
+
+* CS（Code-Segment，代码段）：存放代码段的段选择符。
+* DS（Data-Segment，数据段）：存放数据段的段选择符。
+* SS（Stack-Segment，栈段）：存放栈的段选择符。
+* ES、FS、GS：可以存放额外三个数据段的段选择符，由程序自由使用。
+
+
