--- Auto-Git Commit ---

--- a/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
+++ b/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
@@ -16,6 +16,11 @@
     - [2.3 x86 内存管理机制](#23-x86-内存管理机制)
         - [2.3.1 分段机制](#231-分段机制)
             - [2.3.1.1 段选择符（段选择寄存器）](#2311-段选择符段选择寄存器)
+            - [2.3.1.2 段描述符](#2312-段描述符)
+            - [2.3.1.3 段描述符表](#2313-段描述符表)
+            - [2.3.1.4 逻辑地址转换总结](#2314-逻辑地址转换总结)
+        - [2.3.2 分页机制](#232-分页机制)
+            - [页表](#页表)
 
 <!-- /TOC -->
 # 1. x86历史
@@ -127,5 +132,71 @@ Intel 64架构加入了额外的寄存器和其他改良的指令集，可使处
 * DS（Data-Segment，数据段）：存放数据段的段选择符。
 * SS（Stack-Segment，栈段）：存放栈的段选择符。
 * ES、FS、GS：可以存放额外三个数据段的段选择符，由程序自由使用。
+
+由于段选择符是用来索引段描述符表访问段描述符的，为了加速段描述符的访问，x86 在段寄存器后增加了一个程序不可见的段描述符寄存器。当段寄存器被加载到一个新的段选择符后，CPU自动将该段选择符索引的段描述符加载到这个不可见的段描述符寄存器中。这6个段寄存器的构造如图1-5所示。 ￼ 图1-5 段寄存器的构造:
+![2019-09-24-16-34-06.png](./images/2019-09-24-16-34-06.png)
+
+
+#### 2.3.1.2 段描述符
+段描述符描述某个段的基地址、长度以及各种属性（例如，读/写属性、访问权限等）。这是分段机制的核心思想。
+
+段描述符的结构如图1-6所示。
+![2019-09-24-16-48-39.png](./images/2019-09-24-16-48-39.png)
+在此，我们只详细介绍其中的Base字段、Limit字段和DPL字段。
+
+* Base字段描述了该段的基地址。
+* Limit字段描述了该段的长度。
+* DPL字段指明描述符权限级别，表示该段所具有的权限。它表示代码访问此段所需要的最低权限！！！。
+
+当CPU通过一个逻辑地址的段选择符获得该段对应的段描述符后，会使用段描述符中各种属性字段对访问进行检查，一旦确认访问合法，CPU将段描述符中的32位基地址和程序中逻辑地址的32位偏移量相加。至此，CPU便获得了逻辑地址所对应的线性地址。
+
+#### 2.3.1.3 段描述符表
+在前面介绍段选择符的结构时，我们了解到段选择符中的 TI 字段用于指明索引哪个段描述符表。TI字段的必要性源于x86架构提供了两种段描述符表 — GDT和LDT。
+系统中至少有一个 GDT 可以被所有的进程访问。与此同时，系统中可以有一个或多个LDT，可以被某个进程私有，也可以被多个进程共享。
+
+* GDT是内存中的一个数据结构。简单地讲，可以将GDT看成是一个数组，由基地址（Base）和长度（Limit）描述。
+* LDT是一个段，需要用一个段描述符来描述。LDT 的段描述符存放在GDT中，当系统中有多个LDT时，GDT中必须有对应数量的段描述符。
+
+为了加速对GDT和LDT的访问，x86架构提供了GDTR寄存器和LDTR寄存器。关于这两种寄存器的具体描述如下。
+
+* GDTR：包括一个32位的基地址（Base）和一个16位的长度（Limit）。
+* LDTR：结构与段寄存器相同（同样包含对程序不可见的段描述符寄存器）。
+通过使用LGDT/SGDT指令对GDTR进行读取/存储；
+通过使用LLDT/SLDT对LDTR进行读取/存储。
+在进行进程切换时，LDTR的值会被换成新进程对应的LDT的段描述符。
+通过段选择符索引GDT/LDT的过程如图1-7所示。
+![2019-09-24-16-54-59.png](./images/2019-09-24-16-54-59.png)
+
+#### 2.3.1.4 逻辑地址转换总结
+假设程序中某条语句访问了数据段, 例如:
+```
+int a = 100; //全局变量
+int func(){
+    int b;
+    b = a;
+}
+```
+程序从加载到变量a的逻辑地址转换为线性地址过程如下.
+* 程序加载
+    * 通过该进程LDT的段选择符！！！索引GDT, 获得LDT的段描述符, 被加载到LDTR寄存器的不可见部分中.
+    * 该进程的CS、DS、SS被加载到了相应的段选择符. 同时, CPU根据段选择符的TI字段, 索引GDT/LDT, 获得相应的段描述符并加载到CS、DS、SS对应的不可见部分.
+* 程序执行到b=a, 需要从a所在的内存中取值, 必须先把a的逻辑地址转换成线性地址
+    *  进行必要的属性、访问权限检查
+    * 从DS对应的段描述符寄存器获得该段的基地址
+    * 将变量a的32位偏移量和描述符中的基地址相加, 获得变量a的线性地址.
+
+
+### 2.3.2 分页机制
+分页机制让操作系统中的虚拟内存机制称为可能. 一个页面可以存在于物理内存(！！！)中, 也可以存放在磁盘的交换区域！！！(如Linux下的Swap分区！！！, Windows的虚拟内存文件！！！)中, 程序可以使用比机器物理内存更大的内存区域！！！.
+
+分页机制的核心思想是通过页表将线性地址转换为物理地址, 并配合旁路转换缓冲区(Translation Lookaside Buffer, TLB！！！)来加速地址转换过程. 操作系统在启动过程中, 通过将CR0寄存器的PG位置1来启动分页机制.
+![2019-09-24-17-02-24.png](./images/2019-09-24-17-02-24.png)
+从图中看到, 分页机制主要由页表、CR3和TLB三个部件构成. 下面以4KB页面的32位分页为例进行讲解.
+
+#### 页表
+
+
+
+
 
 
