--- a/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
+++ b/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
@@ -20,7 +20,15 @@
             - [2.3.1.3 段描述符表](#2313-段描述符表)
             - [2.3.1.4 逻辑地址转换总结](#2314-逻辑地址转换总结)
         - [2.3.2 分页机制](#232-分页机制)
-            - [页表](#页表)
+            - [2.3.2.1 页表](#2321-页表)
+                - [2.3.2.1.1 未开启PAE的32位分页](#23211-未开启pae的32位分页)
+                - [2.3.2.1.2 启用PAE的32位分页](#23212-启用pae的32位分页)
+            - [2.3.2.2 CR3寄存器](#2322-cr3寄存器)
+            - [2.3.2.3 TLB](#2323-tlb)
+            - [2.3.2.4 线性地址转换为物理地址的过程](#2324-线性地址转换为物理地址的过程)
+    - [2.4  x86-64架构](#24--x86-64架构)
+        - [2.4.1 IA-32e的分段机制](#241-ia-32e的分段机制)
+        - [2.4.2 IA-32e的分页机制](#242-ia-32e的分页机制)
 
 <!-- /TOC -->
 # 1. x86历史
@@ -193,7 +201,89 @@ int func(){
 ![2019-09-24-17-02-24.png](./images/2019-09-24-17-02-24.png)
 从图中看到, 分页机制主要由页表、CR3和TLB三个部件构成. 下面以4KB页面的32位分页为例进行讲解.
 
-#### 页表
+#### 2.3.2.1 页表
+页表(Page Table)是用于将线性地址转换成物理地址的主要数据结构.
+一个地址对齐到页边界(！！！)后的值称为页帧号, 它实际是该地址所在页面的基地址.
+* 线性地址对应的页帧号！！！即虚拟页帧号(Virtual Frame Number, VFN！！！),
+* 物理地址对应的页帧号！！！即物理页帧号(Physical Frame Number, PFN！！！)或机器页帧号(Machine Frame Number).
+页表就是存储VFN到PFN映射的数据结构。
+
+##### 2.3.2.1.1 未开启PAE的32位分页
+在传统的32位的保护模式中，x86处理器使用两级转换方案，在这种方案中，CR3指向一个4KB的页目录，页目录又分为1024个4KB大小的页表，最后页表分为1024个长为4KB的页。
+未启用PAE的4KB大小的页面如图1-9所示。
+![2019-09-24-17-05-47.png](./images/2019-09-24-17-05-47.png)
+*  页目录项(Page Directory Entry): 包含页表的物理地址(！！！不是线性地址！！！). 页目录项存放在页目录(Page Directory, 也称为页目录表PDT！！！)中, CPU使用线性地址的22~31位(高10位)索引页目录, 以获得该线性地址对应的页目录项. 每个页目录项为4B大小, 故页目录占用4KB大小的物理页面, 共包含1024的页目录项.
+* 页表项(Page Table Entry): 页表项包含该线性地址对应的PFN(！！！物理地址页帧号！！！)。页表项存放在页表(Page Table)中, CPU使用线性地址的12~21位索引页表, 获得该线性地址对应的页表项. 通过将线性地址的0~11位偏移量和基地址相加, 就可以得到线性地址对应的物理地址. 页表项为4B大小, 故页表包含1024个页表项, 占用一个4KB页面.
+* 页表项(Page Table Entry): 页表项包含该线性地址对应的PFN(！！！物理地址页帧号！！！)。页表项存放在页表(Page Table)中, CPU使用线性地址的12~21位索引页表, 获得该线性地址对应的页表项. 通过将线性地址的0~11位偏移量和基地址相加, 就可以得到线性地址对应的物理地址. 页表项为4B大小, 故页表包含1024个页表项, 占用一个4KB页面.
+![2019-09-24-17-11-39.png](./images/2019-09-24-17-11-39.png)
+![2019-09-24-17-12-00.png](./images/2019-09-24-17-12-00.png)
+
+图2-9显示了页目录项、页表项的构成, 通过其中的各个字段, 可以对页面访问权限, 缓存机制, 全局页等属性进行控制.
+
+这里只关注P(Present)字段, 该字段使虚拟内存的实现成为可能. P根据其值不同, 可以代表两种情况:
+* P=1: 物理页面存在于物理内存中, CPU完成地址转换后, 可以直接访问该页面.
+* P=0: 页面不在物理内存中, 当CPU访问该页面时会产生一个缺页错误(Page Fault)并交由操作系统的缺页错误处理程序处理. 通常操作系统会将存放在磁盘上的页面(！！！)调入物理内存, 使访问可以继续. 需要注意的是，由于程序的局部性特点，操作系统会将该页面附近的页面一起调入物理内存，方便CPU的访问。P=0时的PDE和PTE的1～31位都将为操作系统提供物理页面在磁盘上的信息。通常情况下，这些位存储着物理页面在磁盘上的位置。P=0时, 页目录项、页表项格式变成图2-10中的格式。此时1~31位供操作系统使用以记录物理页面在磁盘上的信息, 通常是物理页面在磁盘上的位置！！！.
+
+![2019-09-24-17-15-39.png](./images/2019-09-24-17-15-39.png)
+
+##### 2.3.2.1.2 启用PAE的32位分页
+启用物理地址扩展（之后简称为PAE）后，页表结构将发生相应的变化。页表和页目录的总大小仍是4KB，但页表和页目录中的表项都从32位扩为64位，以使用附加的地址位。
+
+这样，页表和页目录都只有512个表项，变成了原来方案的一半，所以又加入了一个级：CR3指向页目录指针表，即一个包含4个页目录指针的表。启用PAE的4KB大小的页面使用的三级页表如图1-10所示。
+![2019-09-24-17-17-17.png](./images/2019-09-24-17-17-17.png)
+
+#### 2.3.2.2 CR3寄存器
+CPU在索引页目录前, 必须知道页目录所在的物理地址, 该物理地址存放在CR3(Control Register 3)寄存器中, 也称为页目录基地址寄存器(Page-directory base register, PDBR). 一个进程在运行前(！！！), 必须将其页目录的基地址存入CR3. 页目录的基地址必须对齐到4K边界.
+
+启用PAE时，CR3指向页目录指针表(PDPT)。
+
+#### 2.3.2.3 TLB
+为提高地址转换效率, x86架构使用TLB对最近用到的页面映射进行缓存, 当CPU访问某个线性地址, 其所在页面的映射存在于TLB中, 无须查找页表即可进行地址转换. 注意, 很多资料说TLB存放的是线性地址到物理地址的转换, 准确来说应该是: VFN到PFN的转换！！！. 即, CPU从TLB获得一个线性地址对应的PFN后, 仍然要和线性地址的偏移相加, 才能得到最后的物理地址, 而非直接从TLB中获取物理地址.
+
+TLB作为缓存, 其能存放的映射条目有限, 当TLB中没有空闲条目可用时, 替换哪一个旧条目由CPU决定.
+
+TLB也有缓存一致性的问题，这主要是指TLB中的映射条目(！！！)和页表中的映射条目(！！！)的一致性。当操作系统对页表进行修改，要负责对TLB中对应条目或整个TLB进行刷新(！！！)。
+
+从软件的角度来看, x86提供了两种方式刷新TLB:
+* 更新CR3: 此操作可以导致TLB被整体刷新, TLB中所有映射条目失效(全局TLB除外). 操作系统将当前CR3中的值重新写会CR3以刷新整个TLB. 进程切换时, 新进程的页目录基地址会写入CR3而使老进程在TLB中的条目失效.
+* INVLPG指令: 这是一种更细粒度的刷新, 操作系统用它对TLB中单独的页目录项、页表项进行刷新. 这通常是在操作系统修改页表后进行的(例如分配/释放页面！！！).
+
+#### 2.3.2.4 线性地址转换为物理地址的过程
+将分页机制的三个部件——页表、CR3寄存器和TLB介绍完后，这里再对CPU使用分页机制将线性地址转换成物理地址的过程进行总结。
+* CPU访问一个线性地址, 映射在TLB中跳到⓺. 如映射不存在于TLB中, 称为TLB Miss发生, 进行下一步.
+* 查找页表, 页面在物理内存！！！ 中跳到⓸, 不会再进行下一步.
+* 操作系统的缺页处理函数接管, 通常进行如下操作:
+    * 将页面从磁盘复制到物理内存中;
+    * 更改对应页表项, 设置P为1, 并对其他字段相应设置;
+    * 刷新TLB中对应的页表项;
+    * 从缺页错误处理函数中返回.
+* 到这一步, 页面已经存在于物理内存中, 并且页表已经包含了该映射. 此时, 重新执行引发TLB Miss的指令.
+* TLB Miss再次发生(！！！), CPU重新查页表, 把相应的映射插入到TLB中.
+*  到这一步, TLB已经包含了该线性地址对应的PFN. 通过将线性地址中的偏移部分和PFN相加, 就得到了对应的物理地址.
+
+## 2.4  x86-64架构
+IA-32e是 Intel发布的 64位指令集扩展技术，在此以 IA-32e为例介绍 64位架构下的内存管理机制。
+
+IA-32e模式有如下两个子模式。
+
+* 兼容模式。此模式下，只用了32 位的线性地址，将地址的32～47位全部视为0。
+* 64位模式。这种模式产生64位的线性地址，处理器需要保证地址的47～63位完全相同。实际上只使用了48位的地址。
+
+### 2.4.1 IA-32e的分段机制
+分段机制的表现与处理器的工作模式有关。
+
+* 在兼容模式下，分段机制的作用过程与前面介绍的传统的分段机制完全相同。
+* 在64位模式下，分段机制的分段功能基本上被禁用，同时提供64位的通用线性地址空间。处理器将CS、DS、ES、SS中的段基址视为0，而FS、GS中存储的段基址可在线性地址的计算过程中使用。FS、GS方便了本地数据的寻址，及操作系统数据结构的确定。这里还有一点需要引起注意，在64位模式下，处理器不会执行段长度检查！！！。
+
+### 2.4.2 IA-32e的分页机制
+64位寻址模式（长模式）下，PAE是必需的，内存页大小可以是4KB、2MB、1GB。
+与前面介绍的启用PAE时的三级标签页表机制不同，长模式下，系统使用四级标签页表——附加了一个第四级页面映射表（Page-Map Level 4 Table，之后简称为PML 4 Table）。这种机制将48位的线性地址转换为52位的物理地址。下面以 4KB 页面为例对这种机制进行介绍，四级页表的结构如图 1-11所示。
+
+* 第四级页面映射表（PML4）：包含页目录指针表的物理基地址、访问权限和内存管理信息。PML4的物理基地址存在CR3中。
+* 页目录指针：包含一个页目录表的物理基地址、访问权限和内存管理信息。
+* 页目录项：包含一个页表的物理基地址、访问权限和内存管理信息。
+* 页表项：包含一个页面的物理地址、访问权限和内存管理信息。
+![2019-09-24-17-27-22.png](./images/2019-09-24-17-27-22.png)
 
 
 
