--- Auto-Git Commit ---

--- a/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
+++ b/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
@@ -42,6 +42,12 @@
         - [4.1.1 可编程中断架构](#411-可编程中断架构)
         - [4.1.2 PIC](#412-pic)
         - [4.1.3 APIC](#413-apic)
+        - [3.1.4 处理器间中断](#314-处理器间中断)
+        - [3.1.5 中断重要概念](#315-中断重要概念)
+            - [3.1.5.1 中断分类](#3151-中断分类)
+            - [3.1.5.2 中断的优先级](#3152-中断的优先级)
+            - [3.1.5.3 中断的屏蔽](#3153-中断的屏蔽)
+            - [3.1.5.4 IDT表](#3154-idt表)
 
 <!-- /TOC -->
 # 1. x86历史
@@ -435,8 +441,55 @@ APIC由位于CPU中的本地高级可编程中断控制器(Local Advanced Progra
 
 * APIC系统中, 中断的发起大致流程如下.
     * IOAPIC收到某个管脚产生的中断信号
-    
+    * 查找PRT表获得该管脚对应的RTE. 根据RTE各字段格式化出一条中断消息, 并确定发送给哪个(或多个)CPU的LAPIC.(关键部分)
+    * 通过系统总线或APIC总线发送中断消息
+    * LAPIC收到中断消息, 判断是否由自己接收
+    * 如确定接收, 将IRR中对应的位置1. 同时确定此时是否将该中断交给CPU处理.
+    * 如确定提交中断给CPU处理, 从IRR获取最高优先级的中断, 将ISR中对应的位置1, 并提交中断. 对于edge触发, IRR中对应位此时清0.
+    *  CPU处理完中断, 软件写EOI寄存器告知中断处理完成, 对于level触发的中断, IRR中对应位清0. LAPIC可提交下一个中断.
 
+
+### 3.1.4 处理器间中断
+在MP(多处理器)平台上, 多个CPU要协同工作, 处理器间中断(Inter-processor Interrupt, IPI)提供CPU之间相互通信的手段. CPU可以通过LAPIC的ICR(Interrupt Command Register, 中断命令寄存器)向指定的一个/多个CPU发送中断.
+
+操作系统通常使用IPI来完成诸如进程转移、中断平衡和TLB刷新等工作.
+
+### 3.1.5 中断重要概念
+
+#### 3.1.5.1 中断分类
+* 中断源角度分类
+    * 外部中断: 指连接在IOAPIC上设备产生的中断、LAPIC上连接的设备或LAPIC内部中断源产生的中断以及处理器间中断。
+    *  可屏蔽中断: 指可以通过某种方式(例如CLI指令、TPR)进行屏蔽的中断. 与之对应的是不可屏蔽中断.
+    * 软件产生中断: 只通过INT n指令产生的中断.
+
+这样分类不是绝对, 例如外部中断通常是可屏蔽中断, 但也可能属于不可屏蔽中断. 
+* 中断触发方式分类
+    *  edge触发中断: 指中断边沿方式触发(例如上升沿). ISA设备、时钟设备多使用这种触发方式。
+    * level触发中断: 指中断以电平方式触发, 在中断程序应答设备前, 该电平一直有效. PCI设备使用这种触发方式.
+
+#### 3.1.5.2 中断的优先级
+在使用PIC的系统中, PIC的管脚决定了中断的优先级, 连接IR0的设备具有最高优先级, 连接IR7的设备优先级最低.
+
+在APIC系统中, IOAPIC的管脚不再具备优先级, 设备的优先级由它所连接管脚对应RTE中的vector字段决定. vector是x86架构用于索引IDT表的下标, 范围从0~255, 值越大优先级越高. 其中, 32~255可供外部中断使用.
+
+在现代操作系统中, 有几个概念和vector常联系在一起使用, 简单介绍下.
+* IRQ: PIC时代的产物, 由于ISA设备通常是连接到固定PIC管脚, 所以说一个设备的IRQ实际是指它连接的PIC管脚号. IRQ暗示着中断优先级. 进入到APIC时代后, 仍习惯用IRQ来表示一个设备的中断号, 但对于16以下的IRQ, 它们可能不再与IOAPIC的管脚对应.
+* GSI(Global System Interrupt): ACPI引入的概念, 它为系统中每个中断源指定了一个唯一的中断号. IRQ和GSI在APIC系统中常被混用, 实际上对于15以上的IRQ, 它和GSI相等.
+
+这里, GSI和IRQ可以看作等同的概念, 表示某个设备的中断号. 它们与vector的关系由操作系统决定, 通常是在设备驱动注册中断处理程序时由操作系统分配.
+
+#### 3.1.5.3 中断的屏蔽
+无论是在PIC收到中断信号后, 还是LAPIC！！！收到中断消息后, 并不一定都是马上交给CPU处理的, 这还要取决于CPU当前是否屏蔽中断(不可屏蔽中断除外).
+
+当CPU屏蔽中断时, 中断会被依附(pending)在PIC/LAPIC的IRR寄存器(！！！)中, 一旦CPU开启中断, 会在第一时间响应PIC/LAPIC所依附(pending)的中断. CPU可通过下面几种方式屏蔽/开启中断.
+
+* CLI/STI指令: 这是操作系统最常用的屏蔽/开启中断的方法. CLI指令将本CPU的EFLAGS寄存器的IF位清0, 阻止接收中断; STI指令将IF位置1, 允许接收中断. 这两条指令支队当前CPU起作用.
+* TPR（Task Priority Register）寄存器: 根据该寄存器值代表的优先级, 部分屏蔽外部中断.
+* PIC/IOAPIC的中断屏蔽位:
+    * PIC可以通过IMR寄存器屏蔽对应管脚.
+    * IOAPIC可通过RTE中的mask位屏蔽对应管脚. 该方法不会讲中断依附(pengding)到IRR, 而是直接忽略, 对于edge触发中断可能导致中断丢失.
+
+#### 3.1.5.4 IDT表
 
 
 
