--- Auto-Git Commit ---

--- a/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
+++ b/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
@@ -48,6 +48,10 @@
             - [3.1.5.2 中断的优先级](#3152-中断的优先级)
             - [3.1.5.3 中断的屏蔽](#3153-中断的屏蔽)
             - [3.1.5.4 IDT表](#3154-idt表)
+            - [3.1.5.5 中断门](#3155-中断门)
+    - [3.2 异常架构](#32-异常架构)
+    - [3.3 中断和异常对比](#33-中断和异常对比)
+    - [3.4 操作系统对中断/异常的处理流程](#34-操作系统对中断异常的处理流程)
 
 <!-- /TOC -->
 # 1. x86历史
@@ -490,9 +494,53 @@ APIC由位于CPU中的本地高级可编程中断控制器(Local Advanced Progra
     * IOAPIC可通过RTE中的mask位屏蔽对应管脚. 该方法不会讲中断依附(pengding)到IRR, 而是直接忽略, 对于edge触发中断可能导致中断丢失.
 
 #### 3.1.5.4 IDT表
+IDT实际上就是个大数组, 用于存放各种"门"(中断门、陷阱门、任务门). 这些门是中断和异常通往各自处理函数的入口. 当一个中断或异常发生, CPU用它们对应的vector号索引IDT表以获得对应的"门".
+
+IDT表的基地址存放在IDTR寄存器中，该寄存器与GDTR类似，由一个基地址字段（Base）和长度字段（Limit）构成。
+
+#### 3.1.5.5 中断门
+"门"是入口, 中断门就是中断的入口. 中断门实际上是一种段描述符, 称为系统描述符, 由段描述符的S位控制. 格式如图.
+![2019-09-25-10-36-39.png](./images/2019-09-25-10-36-39.png)
+* 其中, 段选择符、偏移量字段可以看作是一个逻辑地址, 通过索引GDT将该逻辑地址转换为中断处理函数入口的线性地址. 
+* 这里特别要注意的是DPL字段, 很多操作系统会将门的DPL设为0. 那么有一个问题: 程序在用户态时(CPL=3)发生中断, 岂不是不能过一个DPL=0的中断门? 实际上, 中断门和陷阱门的DPL只在使用INT n指令引起中断/异常时才检查, 硬件产生的中断/异常不检查. 
+*  P字段代表中断门是否有效, 清0无效.
+
+通常操作系统的中断都用了中断门, 没有使用陷阱门. 中断门和陷阱门唯一区别在于程序通过中断门跳转后, EFLAGS寄存器的IF位自动清0, 中断关闭. 而陷阱门没有.
+
+## 3.2 异常架构
+和中断相比, 异常最大的不同在于它是在程序的执行过程中同步发生的. 例如下面
+```
+void main()
+{
+    int a = 10;
+    a = a/0;
+}
+```
+异常分为三类:
+* 错误(Fault): 由某种错误情况引起, 一般可以被错误处理程序纠正. 错误发生时, 处理器将控制权转移给对应的处理程序, 修正后重新回到产生异常的指令继续执行. 例如, 常见的缺页错误就属于此类.
+
+* 陷阱(Trap): 指在执行了一条特殊指令后引起的异常, 处理器允许忽略异常继续往下执行. 在异常处理程序里不必修正错误, 回到发生异常指令的下一条指令继续执行. 陷阱是有意的异常，陷阱最重要的用途是在用户程序和内核之间提供一个像过程一样的接口（即系统调用）。例如, Linux 32用于实现系统调用的INT 80指令就属于此类.
+
+* 终止(Abort): 指严重的不可恢复的错误, 将导致程序终止的异常. 例如MCA(Machine Check Architecture).
+
+和中断门一样, 陷阱门存放在IDT表中. 异常发生后, CPU用该异常的vector号索引对应的陷阱门. x86架构将vector 0~19预留给各个异常.
+![2019-09-25-10-40-12.png](./images/2019-09-25-10-40-12.png)
+
+## 3.3 中断和异常对比
+![2019-09-25-10-41-08.png](./images/2019-09-25-10-41-08.png)
 
 
 
+## 3.4 操作系统对中断/异常的处理流程
+各个操作系统对于中断/异常处理实现不同, 但基本流程如下
+* CPU通过vector索引IDT表得到对应的"门", 并获得其处理函数的入口地址.
+* 程序跳到处理函数执行, 由于处理函数存放在CPL=0的代码段, 程序可能会发生权限提升. 处理函数通常执行以下步骤.
+    * 保存被中断任务的上下文, 并开始执行处理函数.
+    *  如果是中断, 处理完成后需要写EOI寄存器(伪中断不需要)应答, 异常不需要.
+    *  恢复被打断的任务的上下文, 准备返回
+* 从中断/异常的处理函数返回, 恢复被打断的任务, 使其继续执行.
+
+目前, 新的中断方式: MSI(Message Signalled Interrupt)已经被广泛应用,这里先不介绍.
 
 
 
