--- a/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
+++ b/云计算/虚拟化/系统虚拟化/2. x86架构及操作系统概述.md
@@ -52,6 +52,12 @@
     - [3.2 异常架构](#32-异常架构)
     - [3.3 中断和异常对比](#33-中断和异常对比)
     - [3.4 操作系统对中断/异常的处理流程](#34-操作系统对中断异常的处理流程)
+- [5 进程](#5-进程)
+    - [5.1 上下文](#51-上下文)
+    - [5.2 上下文切换](#52-上下文切换)
+- [6 I/O结构](#6-io结构)
+    - [5.1 x86 I/O架构](#51-x86-io架构)
+    - [5.2 DMA](#52-dma)
 
 <!-- /TOC -->
 # 1. x86历史
@@ -542,5 +548,85 @@ void main()
 
 目前, 新的中断方式: MSI(Message Signalled Interrupt)已经被广泛应用,这里先不介绍.
 
+# 5 进程
+进程是各种资源的合集, 通常一个进程包含以下几种资源.
+* 私有的线性地址空间: 这是进程可以使用的线性地址的总和, 其中内核部分可能和其它进程是共享的.
+* 可执行的程序: 也就是二进制序列, 包含代码和数据.
+* 一些已经获得的其它资源, 如打开的文件、管道等.
+* 进程的权限: 进程的运行权限, 例如Linux中有root用户和非root用户之分
+* 进程的描述符: 有的操作系统成为控制块, 包含操作该进程的一些必要信息, 例如进程ID号
+
+## 5.1 上下文
+上下文就是程序(进程/中断)运行时所需要的寄存器的最小集合. 这些寄存器的后面一般代表着程序运行的一类资源，例如，LDTR就代表着某个进程所使用的段信息，CR3寄存器就代表着进程的私有线性地址空间（分页机制启动时）。
+
+下面看下x86下上下文包含的寄存器.
+(1) 通用寄存器组: EAX、EBX、ECX、EDX、ESI、EDI这6个， 加上ESP(栈指针)、EBP(框架指针).
+(2) 段相关寄存器组: CS、DS、SS, 如果程序使用了ES等额外段寄存器, 也要包含进来.
+(3) 标志寄存器: 主要指EFLAGS寄存器.
+(4) 程序指针寄存器: EIP
+(5) GDT基地址: 用于访问GDT、GDTR中的内容
+(6) LDT段选择符: 如果程序使用了私有的LDT, LDTR的内容
+(7) IDT基地址: 用于访问IDT表, IDTR的内容
+(8) 控制寄存器组: CR系列, 表示当前程序运行时的CPU控制状态
+(9) 浮点相关寄存器组: 用于浮点计算的一些寄存器组
+(10) 一些特殊用途的寄存器: 例如x86架构下的MSR(Model-Specific Registers)
+
+一个程序的上下文可能是上面列出内容的一个子集(例如进程), 也可能是全部(例如虚拟机). 从程序员的观点看, 通常对于上下文切换时不需要改变的寄存器, 也可以说它不是改程序的上下文. 例如进程切换时, GDTR中的内容不需要改变, 为了方便, 通常在一个进程的上下文时不把GDTR算进去. 后面内容, 提到的上下文都是指在上下文切换时必须更改的寄存器的集合.
+
+
+## 5.2 上下文切换
+在操作系统中, 通常只有三种情况会发生上下文切换.
+* 用户态到内核态的切换: 因为运行在不同的Ring级别, 对资源的访问权限不同, 需要切换部分上下文. 例如, 从用户态的栈切换到内核态的栈
+*  进程切换: 一个 CPU 在一个时刻只能处理一个进程，进程切换的实质就是将被终止运行的进程的上下文相关寄存器的值换成新进程的相关值，同时将被终止运行的进程的上下文相关寄存器的值存储在该进程的私有堆栈中。这通常是全上下文的切换. 例如，把CR3换成新进程页目录的地址，EIP指向新进程运行的第一条指令等。
+*  到中断上下文的切换: 中断的处理函数运行在特殊的上下文环境, 称为中断上下文. CPU处理一个中断时, 不管当前CPU在运行一个进程, 还是本身就是在一个中断上下文, 都要切换到中断上下文. 例如, 更改栈指针、EIP变化等. 这通常是部分上下文的切换, 例如CR3寄存器的值就不需要更改. 根据x86架构特点, 处理中断必然经过一个中断上下文阶段, 可能的情况是:
+    * 进程上下文→中断上下文(处理中断)→进程上下文(中断返回执行)
+    * 进程上下文→中断上下文→新进程上下文(处理中断)→进程上下文(最先被打断进程的上下文)
+    * 中断上下文→新中断上下文→......
+
+x86只有一种机制, 即任务门(Task Gate)可以使中断的处理不经过中断上下文而直接进入进程上下文, 但几乎没有操作系统使用它, 而且x86_64已经取消了任务门.
+上下文切换通常有两步:
+* 保存旧上下文: 相关寄存器的值保存在内存中
+* 加载新的上下文: 新的寄存器信息从内存中读入, 加载到对应寄存器中
+
+
+保存旧的上下文动作在x86架构下有时会由CPU自动完成一部分(例如中断发生, 使用TSS), 但在现代操作系统中, 通常由软件完成(！！！).
+
+# 6 I/O结构
+## 5.1 x86 I/O架构
+设备通常通过寄存器和设备RAM将自身的功能展现给CPU, CPU读写这些寄存器和RAM(！！！)即可完成对设备的访问和操作. 通过访问方式的不同, 可以将x86架构的I/O分为如下两类.
+* Port I/O(端口I/O): 即通过I/O端口访问设备寄存器.
+x86有65536个8位的I/O端口(！！！), 编号为0x0000 ~ 0xFFFF. 如果将端口号看作访问设备端口的地址, 那么这65536个端口就构成了64KB的地址空间, 称为I/O端口地址空间. 与前面说的线性地址空间和物理地址空间不同, I/O端口地址空间是独立的, 也就说它并不是线性地址空间或物理地址空间的一部分(！！！). 使用IN/OUT指令访问端口时, CPU通过一个特殊的管脚标识这是一次I/O端口访问, 于是芯片组知道地址线上的地址是I/O端口号并进行相应操作. 此外, 2个或4个连续的8位I/O端口, 可以组成16位或32位的I/O端口.
+
+* MMIO(Memory Map I/O, 内存映射I/O): 即通过内存访问的形式访问设备寄存器或设备RAM.
+x86架构下, MMIO和Port I/O最大不同在于MMIO要占用CPU的物理地址空间. 它把设备的寄存器或设备RAM映射到物理地址空间某段地址, 使用MOV这样的访存指令访问此段地址即可访问到映射的设备. 很多CPU架构都没有Port I/O, 采用统一的MMIO方式. 由此可见, MMIO是一种更先进的I/O访问方式.
+对于Port I/O, 由于编译器不能产生IN/OUT指令(！！！), 操作系统通常会把汇编指令封装成类似inb()、outb()这样的函数.
+对于MMIO. 由于整个物理地址空间都会被映射到线性地址空间, 程序访问I/O资源时也要做线性地址到物理地址的转换(！！！). 与普通物理地址到线性地址的映射不同, MMIO地址通常是不可缓存的(un-cacheable！！！).
+
+## 5.2 DMA
+DMA(直接内存访问)是将CPU从I/O操作中解放出来(！！！)的一种技术. 如果设备向内存复制数据都经过CPU, 则会消耗大量的CPU时间(大量中断负载), 不利于系统性能. 中断过程中, CPU对其他任务来讲无法使用, 不利于系统性能的提高.
+
+通过DMA，CPU只负责初始化这个传输动作，而传输动作本身由 DMA 控制器（后文简称为DMAC）来实行和完成。在实现 DMA 传输时，由 DMAC 直接控制总线，在DMA 传输前，CPU 要把总线控制权交给 DMAC，结束 DMA 传输后，DMAC立即把总线控制权交回给CPU。
+
+一个完整的DMA传输过程的基本流程如下。
+* DMA请求：CPU对DMAC进行初始化，并向I/O端口发出操作命令， I/O端口提出DMA请求。
+* DMA响应：DMAC对DMA请求进行优先级判别和屏蔽判别，然后向总线裁决逻辑提出总线请求。CPU执行完当前总线周期后释放总线控制权。此时，总线裁决逻辑发出总线应答，表示DMA已被响应，并通过DMAC通知I/O端口开始DMA传输。
+* DMA传输：DMAC获得总线控制权后，CPU即可挂起或只执行内部操作，由DMAC发出读/写命令，直接控制RAM与I/O端口进行DMA传输。
+* DMA结束：当完成规定的成批数据传送后，DMAC释放总线控制权，并向 I/O 端口发出结束信号。当 I/O 端口接收到结束信号后，停止 I/O 设备的工作并向 CPU提出中断请求，使 CPU 执行一段检查本次 DMA传输操作正确性判断的代码，并从不介入的状态退出。
+
+由此可见，DMA无须CPU直接控制传输，也没有中断处理方式那样保留现场和恢复现场的过程，通过硬件（DMAC）为 RAM 与 I/O 设备开辟了一条直接传送数据的通路，极大地提高了CPU效率。需要注意的是，DMA操作访问的必须是连续的物理内存。
+![2019-09-25-11-32-27.png](./images/2019-09-25-11-32-27.png)
+
+
+通过DMA, 驱动程序(！！！)可以事先(或在需要的时候！！！)设定一个内存地址！！！, 设备就可以绕开CPU直接向内存中复制(或读取)数据(！！！).
+根据发起者不同, DMA可以被分为两种.
+
+*  同步DMA: 是指DMA操作由软件发起. 一般流程是设备驱动在设定好需要被DMA访问的内存地址后, 写某个寄存器来通知设备发起DMA. 此时, 设备会直接从该内存地址读取内容并操作. 典型例子就是声卡, 当播放一段音频时, 驱动将该音频存放的地址通知声卡, 设备从内存直接读取数据并播放, 完成后以一个中断通知驱动操作完成.
+* 异步DMA: 是指DMA操作由设备发起. 一般流程是设备将数据直接复制到一个事先设定好的内存地址, 再通过一个中断通知驱动程序. 典型例子是网卡收包, 当网卡接收到数据包后, 会直接复制到驱动程序设定的内存地址去, 并以中断形式通知网络包的到来.
+
+设备的DMA操作都是使用物理地址访问内存！！！, 不经过线性地址到物理地址的转换！！！. 但IOMMU出现后, 这个情况就被改变了, 后面说明.
+
+从驱动的角度看, 它要提供一片内存区域供设备访问, DMA要求这段内存区域在 物理上是连续！！！ 的.
+
+现代设备支持一种称为"分散 - 聚合(Scatter - gather)"DMA的机制, 允许驱动向设备提供不连续的物理内存. 实际上, 驱动是将一组(！！！)以"起始地址 - 长度"为属性的内存描述符提供给设备, 每个描述符描述了一块连续的物理内存, 但连续两个描述符描述的内存不需要连续的. 从宏观上看, 通过这组内存描述符可以向设备提供一片不连续的内存区域; 但从微观角度看, DMA操作访问的仍然是连续的物理内存.
 
 
