--- a/云计算/虚拟化/系统虚拟化/3.系统虚拟化.md
+++ b/云计算/虚拟化/系统虚拟化/3.系统虚拟化.md
@@ -5,6 +5,13 @@
     - [1.2 虚拟环境的简单实现](#12-虚拟环境的简单实现)
     - [1.3  虚拟化漏洞的产生](#13--虚拟化漏洞的产生)
     - [1.4 虚拟化漏洞的解决办法](#14-虚拟化漏洞的解决办法)
+- [2. 处理器虚拟化](#2-处理器虚拟化)
+    - [2.1 指令模拟](#21-指令模拟)
+        - [2.1.1 虚拟寄存器](#211-虚拟寄存器)
+        - [2.1.2 上下文](#212-上下文)
+        - [2.1.3 虚拟处理器](#213-虚拟处理器)
+            - [2.1.3.1 客户机OS角度的虚拟处理器](#2131-客户机os角度的虚拟处理器)
+            - [2.1.3.2 VMM角度的虚拟处理器](#2132-vmm角度的虚拟处理器)
 
 <!-- /TOC -->
 
@@ -31,3 +38,59 @@
 * 硬件辅助手段. 既要填补虚拟化漏洞, 又要保证虚拟化性能, 只能采取一些辅助手段, 或直接在硬件层面填补虚拟化漏洞！！！,
 
 * 软件辅助避免使用无法陷入的敏感指令. 或通过软件的方法避免虚拟机中使用无法陷入的敏感指令！！！.
+
+
+# 2. 处理器虚拟化
+处理器虚拟化是VMM中最核心的部分, 因为访问内存和I/O指令本身就是敏感指令, 所以内存虚拟化和I/O虚拟化都依赖于处理器虚拟化的正确实现.
+
+
+## 2.1 指令模拟
+
+VMM运行在最高特权级, 可以控制物理处理器上所有关键资源; 客户机OS运行在非最高特权级, 所以其敏感指令会陷入到VMM中通过软件方式进行模拟. 所以, 处理器虚拟化的关键在于正确模拟指令的行为.
+
+介绍指令模拟之前, 我们理解三个概念: 虚拟寄存器、上下文和虚拟处理器.
+
+### 2.1.1 虚拟寄存器
+从某种程度上, 物理处理器无非包括了一些存放数据的物理寄存器, 并且规定了使用这些寄存器的指令集, 然后按照一段预先写好的指令流, 在给定的时间点使用给定的部分寄存器来完成某种目的.
+
+当客户机OS试图访问关键资源！！！的时候, 该请求并不会真正发生在物理寄存器上. 相反, VMM会通过准确模拟物理处理器的行为, 而将其访问定位到VMM为其设计与物理寄存器对应的"虚拟"的寄存器上.
+
+当然, 从VMM实现来说, 这样的虚拟寄存器往往是在内存中！！！.
+![2019-09-26-11-22-25.png](./images/2019-09-26-11-22-25.png)
+
+### 2.1.2 上下文
+在没有虚拟化的环境中, 操作系统直接负责物理处理器管理, 负责进程间调度和切换. 但是, VMM接管物理处理器后, 客户机OS运行在VMM为之设计的虚拟处理器之上, 管理虚拟处理器, 并在虚拟处理器上负责该虚拟机内进程调度和切换. 而调度切换, 涉及到了上下文状态, 这里是虚拟处理器上下文.
+
+而在某个时刻, 物理处理器中的寄存器状态构成了当前进程的上下文状态.
+
+进程上下文！！！主要是与运算相关的寄存器状态！！！, 例如EIP寄存器指向进程当前执行的指令, ESP存放着当前进程的堆栈指针等.
+
+虚拟处理器上下文比进程上下文更为复杂, 因为客户机OS本身包含很多敏感指令, 会试图访问和修改物理处理器上定义的所有寄存器, 而这种访问和修改会被VMM重定位到虚拟处理器上. 所以, 对于虚拟处理器, 其上下文包括了更多的系统寄存器, 例如CR0、CR3、CR4和各种MSR等. 当VMM在决定切换虚拟处理器的时候, 需要考虑保存和恢复的上下文也更为复杂.（包含了很多操作系统中很多不可见寄存器）
+
+
+### 2.1.3 虚拟处理器
+虚拟处理器可以从两个角度来理解.
+#### 2.1.3.1 客户机OS角度的虚拟处理器
+首先, 从客户机OS角度, 其在运行的虚拟处理器需要具备与其"期望"的物理处理器一样的功能和行为, 这种"期望"的前提条件甚至可以允许客户机OS的修改, 例如VMM可以修改客户机OS的源码, 使客户机OS所"期望"的与VMM所呈现的功能集合一致. 典型"期望"包括:
+
+⓵ 指令集合与执行效果
+
+⓶ 可用寄存器集合, 包括通用寄存器以及各种系统寄存器.
+
+⓷ 运行模式, 例如实模式、保护模式和64位长模式等。 处理器的运行模式决定了指令执行的效果、寻址宽度和限制以及保护粒度等.
+
+⓸ 地址翻译系统, 例如页表级数.
+
+⓹ 保护机制, 例如分页和分段等.
+
+⓺ 中断/异常机制, 例如虚拟处理器必须能够正确模拟真实处理器的行为, 在错误的执行条件下, 为虚拟机注入一个虚拟的异常.
+
+#### 2.1.3.2 VMM角度的虚拟处理器
+从VMM的角度看, 虚拟处理器是其需要模拟完成的一组功能集合.
+
+虚拟处理器功能可以由物理处理器和VMM共同完成.
+* 对于非敏感指令！！！, 物理处理器直接解码处理其请求！！！, 并将相关效果直接反映到物理寄存器上;
+* 对于敏感指令！！！, VMM负责陷入再模拟！！！, 从程序角度也就是一组数据结构与相关处理代码的集合.
+    * 数据结构用于存储虚拟寄存器的内容,
+    * 相关处理代码负责按照物理处理器的行为将效果反映到虚拟寄存器上.
+
