--- Auto-Git Commit ---

--- a/云计算/虚拟化/系统虚拟化/3.系统虚拟化.md
+++ b/云计算/虚拟化/系统虚拟化/3.系统虚拟化.md
@@ -315,4 +315,21 @@ I/O虚拟化主要包含以下几个方面的虚拟化
 
 ## 4.5 设备共享
 
+设备虚拟化中，
+* 有些设备可以被软件模拟器完全用软件的方式模拟而不用接触实际物理设备，比如CMOS，
+* 而有些设备需要设备模拟进一步请求物理硬件的帮助, 也就是需要利用到物理外设资源.
+
+一般输入输出类设备属于后一类设备，如鼠标、键盘、显卡、硬盘、网卡。这些设备都涉及到从真实设备上获取输入或者输出到真实设备上。
+
+设备模拟器通常运行在一个 I/O特权环境！！！ 中, 这样的I/O特权环境中有驱动物理外设的物理驱动程序.
+
+这种情况下, 相关的设备模拟器本身是作为物理驱动程序的一个客户而存在, 例如一个用户进程. I/O特权环境中的多数物理驱动程序都是可以同时接收多个客户或进程的请求，达到物理资源的复用.
+
+同样, 每个虚拟机都有自己专属的设备模拟逻辑, 也就是在I/O特权环境中存在一个相对应的用户进程！！！. 通过这种方式, I/O虚拟化就有效地将物理资源在多个虚拟环境中复用起来, 如图。
+![2019-09-27-11-20-07.png](./images/2019-09-27-11-20-07.png)
+
+
+
+
+
 
