--- a/云计算/虚拟化/系统虚拟化/3.系统虚拟化.md
+++ b/云计算/虚拟化/系统虚拟化/3.系统虚拟化.md
@@ -38,6 +38,29 @@
         - [4.4.2 半虚拟化](#442-半虚拟化)
         - [4.4.3 基于硬件的直接分配（实际上已经不是设备模拟了）](#443-基于硬件的直接分配实际上已经不是设备模拟了)
     - [4.5 设备共享](#45-设备共享)
+- [5. VMM功能和组成](#5-vmm功能和组成)
+    - [5.1 虚拟环境管理](#51-虚拟环境管理)
+        - [5.1.1 虚拟资源](#511-虚拟资源)
+        - [5.1.2 虚拟环境调度](#512-虚拟环境调度)
+        - [5.1.3 虚拟机之间的进程通信](#513-虚拟机之间的进程通信)
+        - [5.1.4 虚拟化环境的管理接口](#514-虚拟化环境的管理接口)
+    - [5.2 物理资源管理](#52-物理资源管理)
+        - [5.2.1 处理器管理](#521-处理器管理)
+        - [5.2.2 内存管理](#522-内存管理)
+        - [5.2.3 中断管理](#523-中断管理)
+        - [5.2.4 系统时间维护](#524-系统时间维护)
+        - [5.2.5 设备管理](#525-设备管理)
+    - [5.3 其它模块](#53-其它模块)
+        - [5.3.1 软件定时器](#531-软件定时器)
+        - [5.3.2 多处理器同步原语(spinlock、rcu等)](#532-多处理器同步原语spinlockrcu等)
+        - [5.3.3 调试手段(包括系统级别和虚拟环境待定)](#533-调试手段包括系统级别和虚拟环境待定)
+        - [5.3.4 性能采集与分析工具](#534-性能采集与分析工具)
+        - [5.3.5 安全机制](#535-安全机制)
+        - [5.3.6 电源管理](#536-电源管理)
+- [6. VMM分类](#6-vmm分类)
+    - [6.1 按虚拟平台分类](#61-按虚拟平台分类)
+        - [6.1.1 完全虚拟化](#611-完全虚拟化)
+            - [6.1.1.1 软件辅助的完全虚拟化](#6111-软件辅助的完全虚拟化)
 
 <!-- /TOC -->
 
@@ -327,6 +350,117 @@ I/O虚拟化主要包含以下几个方面的虚拟化
 
 同样, 每个虚拟机都有自己专属的设备模拟逻辑, 也就是在I/O特权环境中存在一个相对应的用户进程！！！. 通过这种方式, I/O虚拟化就有效地将物理资源在多个虚拟环境中复用起来, 如图。
 ![2019-09-27-11-20-07.png](./images/2019-09-27-11-20-07.png)
+
+
+# 5. VMM功能和组成
+从软件角度来看，物理机器是有处理器、内存和I/O设备等一组资源的实体。虚拟机也一样。
+
+VMM基本上由两个部分组成，虚拟环境管理和物资资源管理，前一部分是所有VMM产品需要提供的功能，后一部分根据实现结构差异各有差异。
+
+## 5.1 虚拟环境管理
+### 5.1.1 虚拟资源
+VMM需要提供如下基本模块.
+* 处理器虚拟化模块. 为虚拟机提供虚拟处理器.
+* 内存虚拟化模块. 为虚拟机提供虚拟内存
+* 设备虚拟化模块. 为虚拟机提供虚拟I/O设备.
+
+### 5.1.2 虚拟环境调度
+操作系统调度单位进程/线程，VMM调度单位是虚拟处理器
+
+当虚拟处理器被调度时，VMM调度程序负责将虚拟处理器上下文装载到物理处理器上，然后虚拟处理器所对应的客户指令开始真正执行。
+
+当时间片用完，或者虚拟指令退出，程序调度触发，挑选下一个虚拟处理器继续执行。
+
+VMM调度策略有多种，例如平均分配时间片，或按照虚拟机权重等。
+
+### 5.1.3 虚拟机之间的进程通信
+与OS就进程通信机制类似，虚拟机之间也存在虚拟机之间通信机制。
+
+虚拟机之间实现进程通信的方式有很多，通常来讲，VMM实现虚拟机之间的进程通信机制，并向虚拟机之间提供响应API，虚拟机的客户OS通过调用这些API和其它虚拟机进行通信。这些API可以是事件通知也可以是共享内存。
+
+VMM还提供虚拟机和VMM之间交互API。
+
+### 5.1.4 虚拟化环境的管理接口
+虚拟机的管理功能由上层的管理程序和VMM提供的管理接口组成.
+* VMM提供一组完备的管理接口, 来支持虚拟环境的创建、删除、暂停、查询和迁移等功能.
+* 上层的管理程序则通过调用VMM提供的管理接口, 为用户提供管理界面
+
+## 5.2 物理资源管理
+与OS一样, VMM本身承担全部或部分物理资源管理角色.
+### 5.2.1 处理器管理
+* 系统启动时检测并获取所有的处理器;
+* 对每个处理器进行初始化, 如设置运行模式、设置页表、设置中断处理函数等;
+* 将所有处理器纳入调度序列, 由调度程序对处理器进行调度.
+
+有些VMM还支持对物理处理器的热插拔. 有些VMM还具有高可靠性的支持, 当收到处理器失效通知时, 如MCA(Machine Check Abort), VMM将其做热拔出处理.
+
+### 5.2.2 内存管理
+* 系统启动时VMM检测并获取内存;
+* 对获得的内存的初始化, 包括分页并设置页表等;
+* 提供内存分配接口, 以便VMM的其它模块能获得/释放内存;
+* 给虚拟机分配内存, 并维护虚拟机物理地址与实际物理地址的映射关系, 以供VMM其它模块查询使用.
+
+### 5.2.3 中断管理
+VMM负责初始化并设置中断相关资源, 如处理器中断向量表、Local APIC和中断控制器(I/O APIC、8259 PIC). 当中断发生后, VMM是接收者, 它会根据中断的来源, 或直接处理, 或转发到相应特权虚拟机来处理.
+
+### 5.2.4 系统时间维护
+VMM拥有和时间相关的硬件资源, 因此VMM负责维护系统时间, 并向各虚拟机提供虚拟化的时间.
+
+### 5.2.5 设备管理
+Hypervisor模型中, 所有外设都属于VMM, 因此, VMM需要包含所有设备的驱动程序来管理这些设备. 混合模型下, 大部分外设属于特权客户操作系统, 由特权客户OS的驱动程序来管理这些外设. VMM也拥有少部分的设备, 如用于调试的串口, 因此也需要包含这些设备的驱动程序.
+
+## 5.3 其它模块
+### 5.3.1 软件定时器
+通常是通过时钟中断处理函数来实现的, 在VMM中广泛使用, 如系统时间的维护等.
+### 5.3.2 多处理器同步原语(spinlock、rcu等)
+与OS一样, 当多处理器共享同一个资源时, VMM需要提供同步原语来同步多处理器的读写访问.
+
+### 5.3.3 调试手段(包括系统级别和虚拟环境待定)
+printk是最简单的调试手段, 有些还会开发其他调试工具
+
+### 5.3.4 性能采集与分析工具
+VMM通常也会提供profiling工具, 用于性能数据的采集和分析. 这些能采集VMM的全局的性能数据, 也能采集针对某个虚拟机的性能数据.
+
+### 5.3.5 安全机制
+VMM要保证各个虚拟机之间, 以及虚拟机与VMM之间是隔离的.
+
+### 5.3.6 电源管理
+包括处理器电源管理、睡眠状态电源管理等.
+
+
+# 6. VMM分类
+* 软件虚拟化
+通过软件模拟来实现VMM层，通过纯软件的环境来模拟执行客户机里的指令。
+最纯粹的软件虚拟化实现当属QEMU。在没有启用硬件虚拟化辅助的时候，它通过软件的二进制翻译￼仿真出目标平台呈现给客户机，客户机的每一条目标平台指令都会被QEMU截取，并翻译成宿主机平台的指令，然后交给实际的物理平台执行。由于每一条都需要这么操作一下，其虚拟化性能是比较差的，同时其软件复杂度也大大增加。但好处是可以呈现各种平台给客户机，只要其二进制翻译支持。
+
+* 硬件虚拟化
+硬件虚拟化技术就是指计算机硬件本身提供能力让客户机指令独立执行，而不需要（严格来说是不完全需要）VMM截获重定向。
+以x86架构为例，它提供一个略微受限制的硬件运行环境供客户机运行（non-root mode￼），在绝大多数情况下，客户机在此受限环境中运行与原生系统在非虚拟化环境中运行没有什么两样，不需要像软件虚拟化那样每条指令都先翻译再执行，而VMM运行在root mode，拥有完整的硬件访问控制权限。仅仅在少数必要的时候，某些客户机指令的运行才需要被VMM截获并做相应处理，之后客户机返回并继续在non-root mode中运行。可以想见，硬件虚拟化技术的性能接近于原生系统￼，并且，极大地简化了VMM的软件设计架构。
+Intel从2005年就开始在其x86 CPU中加入硬件虚拟化的支持——Intel Virtualization Technology，简称Intel VT。到目前为止，在所有的Intel CPU中，都可以看到Intel VT的身影。
+
+## 6.1 按虚拟平台分类
+根据VMM提供的虚拟平台类型可将VMM分成两类:
+* 第一类VMM虚拟的是现实存在的平台, 并且在客户机操作系统来看, 虚拟的平台和现实的平台是一样的, 客户机操作系统察觉不到是运行在一个虚拟平台上. 这样的虚拟平台可以运行现有的操作系统, 无须对操作系统进行修改, 因此称为完全虚拟化(Full Virtualization).
+* 第二类VMM虚拟的是现实中不存在的平台, 而是经过VMM重新定义的, 这种虚拟化平台需要对所运行的客户机操作系统进行或多或少的修改使之适应虚拟环境, 因此客户机OS知道其运行在虚拟平台上, 并且会去主动适应. 这种称为类虚拟化(Para Virtualization).
+
+另外, 一个VMM既可以提供完全的虚拟化的虚拟平台, 又提供类虚拟化的虚拟平台.
+
+### 6.1.1 完全虚拟化
+x86架构为例, 完全虚拟化经历了两个阶段: 软件辅助的完全虚拟化和硬件辅助的完全虚拟化
+#### 6.1.1.1 软件辅助的完全虚拟化
+x86虚拟化技术早期, x86体系没有在硬件层次！！！上对虚拟化提供支持, 因此完全虚拟化只能通过软件实现.
+一个典型做法是优先级压缩(Ring Compression)和二进制代码翻译(Binary Translation)相结合.
+* 优先级压缩(Ring Compression)
+优先级压缩的原理是: 由于VMM和客户机运行在不同特权级上, 对应到x86上, 通常是VMM运行在Ring 0, 客户机OS内核运行在Ring 1, 客户机OS应用程序运行在Ring 3. 当客户机OS内核执行相关特权指令时, 由于在非特权的Ring 1, 因此通常触发异常, VMM截获该特权指令并进行虚拟化.
+Ring Compression能正确处理大部分特权指令, 但是由于x86指令体系在设计之初并没有考虑到虚拟化, 因此有些指令还是不能通过Ring Compression正常处理, 即在Ring 1做特权操作的时候却没有触发异常(比如修改EFLAGES的IF标志), 从而VMM不能截获并做相应处理.
+* 二进制代码翻译(Binary Translation)
+二进制代码翻译方法因此被引入来处理这些虚拟化不友好的指令.
+二进制代码翻译的思想很简单, 就是通过扫描并修改客户机的二进制代码, 将难以虚拟化的指令转化为支持虚拟化的指令.
+VMM通常会对OS的二进制代码进行扫描, 一旦发现需要处理的指令, 就将其翻译成支持虚拟化的指令块(Cache Block). 这些指令块可以与VMM合作访问受限的虚拟资源！！！, 或显式地触发异常！！！ 让VMM进一步处理.
+此外, 由于该技术可以修改客户机的二进制代码, 因此别广泛应用于性能优化！！！, 即将某些造成性能瓶颈的指令替换成更高效的指令来提高性能.
+这种方式很难在架构上保证其完整性, 因此, x86在硬件上加入了对虚拟化的支持, 从而在硬件架构上实现了虚拟化.
+
+
 
 
 
