--- a/云计算/k8s/Kubernetes源码分析/重点概念/3.informer.md
+++ b/云计算/k8s/Kubernetes源码分析/重点概念/3.informer.md
@@ -1,13 +1,14 @@
 <!-- TOC -->
 
-- [2.2.2 我们编写Controller常用的初始化Controller的代码](#222-我们编写controller常用的初始化controller的代码)
-    - [2.2.2.1 Controller结构体定义](#2221-controller结构体定义)
-- [2.2.3 deploymentInformer.Lister()](#223-deploymentinformerlister)
-- [2.2.4 informer start](#224-informer-start)
-- [2.2.5 实现List机制](#225-实现list机制)
-- [2.2.6 Controller run](#226-controller-run)
-    - [2.2.6.1 真正实现watch](#2261-真正实现watch)
-    - [2.2.6.2 确定队列中对象中对应的事件](#2262-确定队列中对象中对应的事件)
+        - [2.2.2 我们编写Controller常用的初始化Controller的代码](#222-我们编写controller常用的初始化controller的代码)
+            - [2.2.2.1 Controller结构体定义](#2221-controller结构体定义)
+        - [2.2.3 deploymentInformer.Lister()](#223-deploymentinformerlister)
+        - [2.2.4 informer start](#224-informer-start)
+        - [2.2.5 实现List机制](#225-实现list机制)
+        - [2.2.6 Controller run](#226-controller-run)
+            - [2.2.6.1 真正实现watch](#2261-真正实现watch)
+            - [2.2.6.2 确定队列中对象中对应的事件](#2262-确定队列中对象中对应的事件)
+- [3. 总结](#3-总结)
 
 <!-- /TOC -->
  # 1. 背景
@@ -260,6 +261,7 @@ func NewDeltaFIFO(keyFunc KeyFunc, knownObjects KeyListerGetter) *DeltaFIFO {
 ```
 wg.StartWithChannel(processorStopCh, s.processor.run)
 ```
+```
 这里进行了真正的Listering 调用。
 func (p *sharedProcessor) run(stopCh <-chan struct{}) {
     func() {
@@ -279,6 +281,7 @@ func (p *sharedProcessor) run(stopCh <-chan struct{}) {
     }
     p.wg.Wait() // Wait for all .pop() and .run() to stop
 }
+```
 
 主要看 run 方法，还记得前面已经把ADD UPDATE DELETE 注册了自定义的处理函数了吗。这里就实现了前面函数的触发
 ```
@@ -538,3 +541,14 @@ func (s *sharedIndexInformer) HandleDeltas(obj interface{}) error {
 ```
 
 这个函数就是根据传进来的obj，先从自己的cache 中取一下，看是否存在，如果存在就代表是Update ，那么更新自己的队列后，调用用户注册的Update 函数，如果不存在，就调用用户的 Add 函数。
+
+# 3. 总结
+* kubeInformerFactory表示一类对象的informer工厂，比如Deployment对象可能有v1，v2，v3三个版本，对应三类informer。kubeInformerFactory.start()就是运行该Factory的所有工厂
+
+* kubeInformerFactory默认是没有任何inform，需要对kubeInformerFactory进行初始化的。deploymentsLister: deploymentInformer.Lister() 完成
+
+* list，watch本质上是一个生产者和消费者问题
+    * list 负责不断的消费队列中的时间，和前面注册的add，update，delete回调函数挂钩
+    * watch负责不断的从apiserver中监听该对象的事件
+* HandleDeltas 来最终确定watch到的时间是add，update，delete那种类型
+* FIFO是一种inform对象一种FIFO，如果Deployment 有v1，v2，v3就是三个FIFO
