--- Auto-Git Commit ---

--- a/linux kernal/cdos/QQupdate/分析过程.md
+++ b/linux kernal/cdos/QQupdate/分析过程.md
@@ -22,11 +22,14 @@
 ## 2.1 设置文件权限
 * 思路:首先我们git跟踪QQ更新文件前后变动,然后将替换文件的权限设置成不允许删除或者运行程序不能执行。
 * 结果:设置成666,000,444,400等权限等级都失败
-* 原因分析：跟新前后文件太多，我们不敢设置所有文件权限（可能会程序运行不了，也可能修改用户目录），，所以可能因为设置权限的文件不对。（但是，后来我设置了txupd.exe程序为444，发现更新程序任然可以执行）
+* 原因分析：跟新前后文件太多(几十个文件，大多是不规则文件名，而且有些是用户文件)，我们不敢对所有文件设置权限，所以可能因为设置权限的文件不对。
 
 ## 2.2 替换部分dll文件
-* 前后替换文件非常多，估计30多个，更让人难以接受的是很多文件名称是special（名称具有随机性），不能作为固定文件保存。
-* 另外实验diff的是8.9.1和当前最新版本（9.x.x）。如果QQ最先版本变成10.x.x，那么diff文件又可能不同，我们替换文件不完全很可能导致QQ崩溃。
+* 思路:通过diff比较更新前后更新文件，将更新的文件回滚到旧文件
+* 结果：失败，无法准确确定替换文件
+* 原因分析：
+    * 前后替换文件非常多，估计30多个，更让人难以接受的是很多文件名称是special（名称具有随机性），不能作为固定文件保存。
+    * 另外实验diff的是8.9.1和当前最新版本（9.x.x）。如果QQ最先版本变成10.x.x，那么diff文件又可能不同，我们替换文件不完全很可能导致QQ崩溃。
 
 # 3. 镜像回滚
 * 思路： diff 更新前后文件变化，更新之后将文件回滚到旧版本
