--- a/linux kernal/cdos/QQupdate/分析过程.md
+++ b/linux kernal/cdos/QQupdate/分析过程.md
@@ -28,6 +28,9 @@
 兼容QQ针对qq8.9.1 版本，如果qqupdate，我们的wine可能不能兼容新版本QQ，所以我么需要让QQ禁止更新。
 虽然QQ允许让用户设置禁止更新，但是作为兼容平台层，我们希望收回用户更新软件能力。
 ## 1.1 主要难点
+QQV8.9.1通过创建子进程txupd.exe实现更新，问题的关键是找到wine中执行更新的动作，也就是什么时候创建txupd.exe 进程。
+由于QQ程序有这强大的反调试功能，Spy++、APIMonitor都无法有效的对QQ进行调试，我们无法捕捉到创建进程的相应消息，这为调试带来很大的困难。
+
 # 2. 修改固定文件
 ## 2.1 设置文件权限
 * 思路:首先我们git跟踪QQ更新文件前后变动,然后将替换文件的权限设置成不允许删除或者运行程序不能执行。
@@ -89,14 +92,14 @@
 * 改进：QQ启动时启动探测程序，QQ关闭时关闭探测程序。如果担心我们的探测进程被恶意破坏，我们可以设计我们探测进程为交替守护进程（缺点是资源耗费可能加倍）。
  
 # 5. 修改wine
- 既然txupd是一个更新进程，那么linux创建子进程一定绕不开fork及其类似机制。
+既然QQv8.9.1更新是通过创建txupd子进程实现更新功能，Linux中创建子进程势必绕不开进程创建机制，并且猜测很能是通过fork来实现。当我们fork txupd子进程时，肯定要加载txupd.exe文件，因此我们可以在加载文件的地方做文章。
 ## 5.1 通过fork创建进程过程
  * 原理：fork创建进程过程，fork 的pid确定为子进程后，就可以execv子进程程序，通过文件名，打开探测程序
  * 结果：失败。
  * 原因：根本就没有调用fork这里。WINPAI createProcess 传递的路径名是空
 
 ## 5.2 shell_exect 
-原理：
+原理：可以确定的是QQ创建子进程一定绕不开Wine，如果不是通过fork系统调用实现，那么极有可能是通过直接调用Linux shell command实现创建子进程。
 结果：成功定位到QQ update动作
 
 那么下面目的就是检测到QQ更新动作后，在Wine中做响应的修改来阻止QQ更新。
