--- a/linux kernal/cdos/QQupdate/分析过程.md
+++ b/linux kernal/cdos/QQupdate/分析过程.md
@@ -14,7 +14,7 @@
     - [4.1 删除txupd.exe](#41-删除txupdexe)
     - [4.2 替换txupd.exe](#42-替换txupdexe)
     - [4.3 探测txupd.exe进程kill掉](#43-探测txupdexe进程kill掉)
-- [5. 修改wine](#5-修改wine)
+- [5. 修改wine中创建子进程过程](#5-修改wine中创建子进程过程)
     - [5.1 通过fork创建进程过程](#51-通过fork创建进程过程)
     - [5.2 shell_exect](#52-shell_exect)
         - [5.2.1 直接执行前面探测txupd 程序](#521-直接执行前面探测txupd-程序)
@@ -88,7 +88,7 @@
 * 影响：探测进程占用mem 6M，cpu资源基本忽略。
 * 改进：QQ启动时启动探测程序，QQ关闭时关闭探测程序。如果担心我们的探测进程被恶意破坏，我们可以设计我们探测进程为交替守护进程（缺点是资源耗费可能加倍）。
  
-# 5. 修改wine
+# 5. 修改wine中创建子进程过程
  既然txupd是一个更新进程，那么linux创建子进程一定绕不开fork及其类似机制。
 ## 5.1 通过fork创建进程过程
  * 原理：fork创建进程过程，fork 的pid确定为子进程后，就可以execv子进程程序，通过文件名，打开探测程序
