--- Auto-Git Commit ---

--- a/分布式系统/基础知识/1.raft 一致性协议.md
+++ b/分布式系统/基础知识/1.raft 一致性协议.md
@@ -16,6 +16,10 @@
 - [7. 成员变更](#7-成员变更)
     - [7.1 脑裂问题](#71-脑裂问题)
     - [7.2 解决](#72-解决)
+        - [7.2.1 异常分析](#721-异常分析)
+- [8 Raft与Multi-Paxos的异同](#8-raft与multi-paxos的异同)
+    - [8.1 Raft与Multi-Paxos中相似的概念](#81-raft与multi-paxos中相似的概念)
+    - [8.2 Raft与Multi-Paxos的不同](#82-raft与multi-paxos的不同)
 
 <!-- /TOC -->
 # 1. 背景
@@ -164,4 +168,32 @@ Raft两阶段成员变更过程如下：
 * Leader收到成员变更请求从Cold切成Cnew；
 * Leader在本地生成一个新的log entry，其内容是Cold∪Cnew，代表当前时刻新旧成员配置共存，写入本地日志，同时将该log entry复制至Cold∪Cnew中的所有副本。在此之后新的日志同步需要保证得到Cold和Cnew两个多数派的确认；
 * Follower收到Cold∪Cnew的log entry后更新本地日志，并且此时就以该配置作为自己的成员配置；
-* 如果Cold和Cnew中的两个多数派确认了Cold U Cnew这条日志，Leader就提交这条log entry；(关键)
+* 如果Cold和Cnew中的两个多数派确认了Cold U Cnew这条日志，Leader就提交这条log entry；(关键：很有意思是必须要两个多数派同意这条日志才提交这个日志，日志提交后，这样最终选举leader一定是所有机器中的多数成员)
+* 接下来Leader生成一条新的log entry，其内容是新成员配置Cnew，同样将该log entry写入本地日志，同时复制到Follower上；
+* Follower收到新成员配置Cnew后，将其写入日志，并且从此刻起，就以该配置作为自己的成员配置，并且如果发现自己不在Cnew这个成员配置中会自动退出；
+* Leader收到Cnew的多数派确认后，表示成员变更成功，后续的日志只要得到Cnew多数派确认即可。Leader给客户端回复成员变更执行成功。
+
+### 7.2.1 异常分析
+* 如果Leader的Cold U Cnew尚未推送到Follower，Leader就挂了，此后选出的新Leader并不包含这条日志，此时新Leader依然使用Cold作为自己的成员配置。
+* 如果Leader的Cold U Cnew推送到大部分的Follower后就挂了，此后选出的新Leader可能是Cold也可能是Cnew中的某个Follower。
+* 如果Leader在推送Cnew配置的过程中挂了，那么同样，新选出来的Leader可能是Cold也可能是Cnew中的某一个，此后客户端继续执行一次改变配置的命令即可。
+* 如果大多数的Follower确认了Cnew这个消息后，那么接下来即使Leader挂了，新选出来的Leader肯定位于Cnew中。
+
+两阶段成员变更比较通用且容易理解，但是实现比较复杂，同时两阶段的变更协议也会在一定程度上影响变更过程中的服务可用性，因此我们期望增强成员变更的限制，以简化操作流程。
+* 方法就是每次成员变更只允许增加或删除一个成员。
+    * 成员变更限制每次只能增加或删除一个成员（如果要变更多个成员，连续变更多次）。
+    * 成员变更由Leader发起，Cnew得到多数派确认后，返回客户端成员变更成功。
+    * 一次成员变更成功前不允许开始下一次成员变更，因此新任Leader在开始提供服务前要将自己本地保存的最新成员配置重新投票形成多数派确认。
+    * Leader只要开始同步新成员配置，即可开始使用新的成员配置进行日志同步。
+
+# 8 Raft与Multi-Paxos的异同
+Raft与Multi-Paxos都是基于领导者的一致性算法，乍一看有很多地方相同，下面总结一下Raft与Multi-Paxos的异同。
+
+## 8.1 Raft与Multi-Paxos中相似的概念
+![2019-10-10-17-17-27.png](./images/2019-10-10-17-17-27.png)
+
+## 8.2 Raft与Multi-Paxos的不同
+![2019-10-10-17-17-59.png](./images/2019-10-10-17-17-59.png)
+
+
+
