--- a/云计算/k8s/Kubernetes源码分析/重点概念/3.informer.md
+++ b/云计算/k8s/Kubernetes源码分析/重点概念/3.informer.md
@@ -1,5 +1,11 @@
+
 <!-- TOC -->
 
+- [1. 背景](#1-背景)
+- [2. 源码分析](#2-源码分析)
+    - [2.1 kubeinformers 使用](#21-kubeinformers-使用)
+    - [2.2 sample-controller 分析源码](#22-sample-controller-分析源码)
+        - [2.2.1 kubeInformerFactory.Start](#221-kubeinformerfactorystart)
         - [2.2.2 我们编写Controller常用的初始化Controller的代码](#222-我们编写controller常用的初始化controller的代码)
             - [2.2.2.1 Controller结构体定义](#2221-controller结构体定义)
         - [2.2.3 deploymentInformer.Lister()](#223-deploymentinformerlister)
@@ -11,11 +17,12 @@
 - [3. 总结](#3-总结)
 
 <!-- /TOC -->
- # 1. 背景
+
+# 1. 背景
  几乎所有的Controller都有informer，这样通过Watch 或者Get List 可以获取对应的Object，下面我们从源码分析角度来看一下Client go Informer 的机制。
 
- # 2. 源码分析
- ## 2.1 kubeinformers 使用
+# 2. 源码分析
+## 2.1 kubeinformers 使用
  ```
  kubeClient, err := kubernetes.NewForConfig(cfg)
 if err != nil {
@@ -33,10 +40,10 @@ controller := NewController(kubeClient, exampleClient,
 kubeInformerFactory.Start(stopCh)
  ```
 
- ## 2.2 sample-controller 分析源码
+## 2.2 sample-controller 分析源码
  * https://github.com/kubernetes/sample-controller/blob/master/main.go
 
- ### 2.2.1 kubeInformerFactory.Start
+### 2.2.1 kubeInformerFactory.Start
  kubeInformerFactory.Start都干了啥？
  * k8s中，每种类型都有一种informer，sharedInformerFactory是将所有的informer集中在一起
 ```
