--- Auto-Git Commit ---

--- a/分布式系统/分布式系统概念与设计/2.上下抽象层.md
+++ b/分布式系统/分布式系统概念与设计/2.上下抽象层.md
@@ -9,6 +9,7 @@
     - [2.1 node 在系统模型中地位](#21-node-在系统模型中地位)
     - [2.2 node之间交互在分布式系统中地位](#22-node之间交互在分布式系统中地位)
     - [2.3 Timing/Ordering 假设](#23-timingordering-假设)
+- [2.4 一致性问题](#24-一致性问题)
 
 <!-- /TOC -->
 
@@ -79,4 +80,11 @@
 
 有两种模型解决上面问题
 * 同步模型
+    * 消息有传输延时上限，通过精确锁实现消息传输同步
+    * 添加了假设，延时时间和发送消息顺序
 * 异步模型
+    * 消息没有传输延时上限，锁也不存在
+
+
+# 2.4 一致性问题
+
