--- Auto-Git Commit ---

--- a/分布式系统/分布式系统概念与设计/2.上下抽象层.md
+++ b/分布式系统/分布式系统概念与设计/2.上下抽象层.md
@@ -9,7 +9,10 @@
     - [2.1 node 在系统模型中地位](#21-node-在系统模型中地位)
     - [2.2 node之间交互在分布式系统中地位](#22-node之间交互在分布式系统中地位)
     - [2.3 Timing/Ordering 假设](#23-timingordering-假设)
-- [2.4 一致性问题](#24-一致性问题)
+    - [2.4 一致性问题](#24-一致性问题)
+        - [2.4.1 FLP 不可能理论](#241-flp-不可能理论)
+        - [2.4.2 CAP 理论](#242-cap-理论)
+    - [2.5 强一致性 VS 弱一致性](#25-强一致性-vs-弱一致性)
 
 <!-- /TOC -->
 
@@ -86,5 +89,25 @@
     * 消息没有传输延时上限，锁也不存在
 
 
-# 2.4 一致性问题
+## 2.4 一致性问题
+* 一致性问题是分布式系统需要解决的核心问题
+
+### 2.4.1 FLP 不可能理论
+* 参见 分布式系统/基础知识/FLP不可能理论
+### 2.4.2 CAP 理论
+* 参见 分布式系统/基础知识/CAP理论
+
+## 2.5 强一致性 VS 弱一致性
+* 强一致性保证数据更新和可见的顺序等同于非备份系统
+* 弱一致性模型不保证
+
+一致性模型分类
+
+* Strong consistency models (capable of maintaining a single copy)
+    * Linearizable consistency
+    * Sequential consistency
+* Weak consistency models (not strong)
+    * Client-centric consistency models
+    * Causal consistency: strongest model available
+    * Eventual consistency models
 
