--- Auto-Git Commit ---

--- a/分布式系统/分布式系统概念与设计/系统抽象.md
+++ b/分布式系统/分布式系统概念与设计/系统抽象.md
@@ -13,6 +13,10 @@
         - [2.4.1 FLP 不可能理论](#241-flp-不可能理论)
         - [2.4.2 CAP 理论](#242-cap-理论)
     - [2.5 强一致性 VS 弱一致性](#25-强一致性-vs-弱一致性)
+        - [2.5.1 强一致性模型](#251-强一致性模型)
+        - [2.5.2 弱一致性模型](#252-弱一致性模型)
+            - [2.5.2.1 Client-centric consistency models](#2521-client-centric-consistency-models)
+            - [2.5.2.2 Eventual consistency](#2522-eventual-consistency)
 
 <!-- /TOC -->
 
@@ -111,3 +115,21 @@
     * Causal consistency: strongest model available
     * Eventual consistency models
 
+### 2.5.1 强一致性模型
+* 线性一致性模型：所有的操作都按照唯一的顺序执行，顺序是全局系统的操作顺序
+* 顺序一致性模型：所有操作按照一定顺序执行，顺序是单个节点的操作顺序
+
+### 2.5.2 弱一致性模型
+有些场景是不需要强一致性模型的，即使出现数据不一致的情况，也能根据代码区处理。
+* 弱一致性模型没有任何通用模型，因为不满足强一致性模型，可以是任何类型
+
+#### 2.5.2.1 Client-centric consistency models
+* 客户端一致模型保证永远不受到过去版本的数据
+    * 实现通常通过在客户端创建额外的cache层，如果返回的是旧版本数据，那么客户端就返回cache的数据
+    * 客户端任然可能看到旧版本的置，如果客户端连接的数据副本是旧数据，那么返回给客户端的数据任然是旧数据。但是客户端永远不会看到旧版本数据重新出现的状况
+
+#### 2.5.2.2 Eventual consistency
+最终一致性模型：如果你停止改变数据，在不固定的时间内，数据最终会达成一致。在此前这段时间内，数据是不一致的。
+最终一致性存在的问题
+* “最终”需要多长时间才能一致，实现时应该竟可能减少
+* 最终一致的数据要求返回给用户数据是准确的，而不是两次返回的数据不一样
