--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
@@ -1,4 +1,22 @@
 <!-- TOC -->
 
+- [1. Hello World](#1-hello-world)
 
 <!-- /TOC -->
+# 1. Hello World
+```
+package main
+
+import "fmt"
+
+func main() {
+	fmt.Println("Hello World!")
+}
+```
+* 最开始必须要导入包，main的包很特殊，可以作为独立程序，main函数就是程序入口。
+* go不需要用分号作为程序结尾，除非一行中有多个句子
+    * 编译时，特定符号后面的换行符转化成分号
+    * 在什么地方进行换行影响go 代码解析
+        * "{" 必须要和func同一行
+        * x+y 换行符可以在+操作符后面，但是不能在前面
+    
