--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
@@ -19,4 +19,13 @@ func main() {
     * 在什么地方进行换行影响go 代码解析
         * "{" 必须要和func同一行
         * x+y 换行符可以在+操作符后面，但是不能在前面
+
+# 2. 命令行参数
+计算的大致过程，输入、计算、输出。go 是如何输入数据呢？
+* 输入方式有文件、网络、其它程序、键盘、命令行。
+* os 包提供了一些函数和变量，os.Args 用来访问程序的命令行参数
+    * os.Args 是一个slice，简单理解就是一个动态的顺序数组
+    * s[i] 访问单个元素
+    * s[m:n]访问连续元素，包含第一个元素，不包含最后一个元素
+    * len(s) 获取数组长度
     
